src/test/ui/resolve/issue-2356.stderr
error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:27:5
   |
27 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find function `clone` in this scope
  --> $DIR/issue-2356.rs:35:5
   |
35 |     clone();
   |     ^^^^^ help: try: `self.clone`

error[E0425]: cannot find function `default` in this scope
  --> $DIR/issue-2356.rs:42:5
   |
42 |     default();
   |     ^^^^^^^ help: try: `Self::default`

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:50:5
   |
50 |     whiskers -= other;
   |     ^^^^^^^^
   |     |
   |     `self` value is only available in methods with `self` parameter
   |     help: try: `self.whiskers`

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:53:5
   |
53 |     shave(4);
   |     ^^^^^ help: try: `Self::shave`

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:55:5
   |
55 |     purr();
   |     ^^^^ not found in this scope

error[E0425]: cannot find function `static_method` in this scope
  --> $DIR/issue-2356.rs:65:9
   |
65 |         static_method();
   |         ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:68:9
   |
68 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:71:9
   |
71 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:74:9
   |
74 |         purr();
   |         ^^^^ not found in this scope

error[E0424]: expected value, found module `self`
  --> $DIR/issue-2356.rs:82:8
   |
82 |     if self.whiskers > 3 {
   |        ^^^^ `self` value is only available in methods with `self` parameter

error[E0425]: cannot find function `grow_older` in this scope
  --> $DIR/issue-2356.rs:90:5
   |
90 |     grow_older();
   |     ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:93:5
   |
93 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:99:5
   |
99 |     whiskers = 0;
   |     ^^^^^^^^ help: try: `self.whiskers`

error[E0425]: cannot find value `whiskers` in this scope
   --> $DIR/issue-2356.rs:104:5
    |
104 |     whiskers = 4;
    |     ^^^^^^^^
    |     |
    |     `self` value is only available in methods with `self` parameter
    |     help: try: `self.whiskers`

error[E0425]: cannot find function `purr_louder` in this scope
   --> $DIR/issue-2356.rs:107:5
    |
107 |     purr_louder();
    |     ^^^^^^^^^^^ not found in this scope

error[E0424]: expected value, found module `self`
   --> $DIR/issue-2356.rs:114:5
    |
114 |     self += 1;
    |     ^^^^ `self` value is only available in methods with `self` parameter

error: aborting due to 17 previous errors

